2008-12-31  Oleg Katsitadze  <olegkat@gmail.com>
	* doc/texinfo.tex (@raggedright, @raggedleft, @raggedcenter):  New
	commands.
	* makeinfo/cmds.c, makeinfo/cmds.h, makeinfo/insertion.c:
	* makeinfo/insertion.h:
	Likewise.
	* doc/texinfo.txi:  Updated documentation.
	* doc/refcard/txirefcard.tex:  Updated.

2008-12-29  Karl Berry  <karl@gnu.org>

	* info/window.c (process_node_text): use size_t for mb variables
	mbi_cur_ptr and mb_len.
	Report from Mutsaers Peter, 29 Dec 2008 17:24:53.

2008-12-16  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/texinfo.tex (\nonfillstart): emulate the normal @indent in
	the non-fill environments (@example, @display, @format,
	@flushleft, @flushright, @verbatim).  Report from wl.

2008-12-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\sectionheading): force vertical mode before
	the first whatsit.  Report from wl.

2008-12-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\pdfsetcolor): also set the PDF color for
	stroking, used for thin-enough rules, e.g., normal _'s.
	Report from wl.

2008-12-13  Werner Lemberg  <wl@gnu.org> and
	    Karl Berry  <karl@gnu.org>

	* util/texi2dvi (uncomment_iftex): ignore repeated @c texi2dvi's,
	thus supporting
	  @iftex
	  @tex
	  ...
	  @end tex
	  @end iftex
       with `texi2dvi -E'.  bug-texinfo mail of 22 Nov 2008 17:01:49.
       Also use @c _texi2dvi instead of @c texi2dvi to reduce conflicts.
       * doc/texinfo.txi (Format with texi2dvi): mention that the 
       source document cannot have a line starting with @c _texi2dvi.

2008-12-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\safewhatsit): undo change of 2008-11-25;
	clearly \unskip is wrong, because then normal interword glue
	before an @ref, for example, is removed.  Report from wl.

2008-11-27  Karl Berry  <karl@gnu.org>

	* configure.ac (AM_MAINTAINER_MODE): I am removing Texinfo
	from TeX Live, since it's almost always available outside TL
	anyway.  Therefore no more need for maintainer mode.